3. 각 탭이 선택되면 선택된 탑 class(active) 적용

--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
-    <style>
-      .list {
-        margin: 10px;
-        padding: 10px;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -26,9 +20,9 @@
       <div>
         <ul class="nav nav-tabs">
           <!-- 선택된탭:선택된 탭에 .active    -->
-          <li class="active"><a href="#">최근</a></li>
-          <li><a href="#">많이본</a></li>
-          <li><a href="#">실시간인기</a></li>
+          <li class="active" id="recent-tab"><a href="#">최근</a></li>
+          <li id="view-tab"><a href="#">많이본</a></li>
+          <li id="popular-tab"><a href="#">실시간인기</a></li>
         </ul>
       </div>
 
