--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
       </div>
 
       <div id="list">
-        여기서 각 리스트 뿌려주기 <br /><br />
         <!-- 제목, 링크, 이미지, CP 를 표시해주세요  -->
 
         <!-- 로딩마크업: 로딩중일때만 표시 -->
         <div class="text-center">
-          <span class="glyphicon glyphicon-refresh"></span> 로딩중
+          <span class="glyphicon glyphicon-refresh"></span>로딩중
         </div>
       </div>
 
       <div class="text-center">
-        <button type="button" class="btn btn-default">더보기</button>
+        <button id="more-button" type="button" class="btn btn-default">더보기</button>
+        <img id="loading-image" class="hidden" src="./loading.gif">
       </div>
     </div>
 
@@ -45,6 +45,7 @@
     <script src="popular.js"></script>
     <script src="recent.js"></script>
     <script src="view.js"></script>
+    <script src="data.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
